Add options to remove all exited containers
Use the `-e` flag to remove all exited containers. If used in
conjunction with `-c`, it will find all containers that exited
or match the `PATTERN` provided.

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -12,3 +12,8 @@ cirros030:
     container_name: cirros.030.dockerclean
     image: cirros:0.3.0
     command: sleep 300
+
+cirrosexited:
+    container_name: cirros.exited.dockerclean
+    image: cirros:0.3.0
+    command: sleep 0
